Added radio box, submit button, more css.

--- a/index.html
+++ b/index.html
@@ -40,10 +40,34 @@
         <option value="4">Take tours to Museums and historical sites</option>
       </select>
     </div>
+    <div class="form-group">
+      <label for="social">What is your preferred level of social interaction with others?</label>
+      <select class="form-control" id="social">
+        <option></option>
+        <option value="1">Relax and Chill.... By myself/with partner</option>
+        <option value="2">Need alone time, but am open to some group functions</option>
+        <option value="3">Some alone time, but I like to mingle!</option>
+        <option value="4">Let's party! I enjoy meeting new people and trying new things</option>
+      </select>
+    </div>
+    <h5>Please select the dining option that fits you best</h5>
+    <div class="radio">
+      <label>
+        <input type="radio" name="food" value="1">
+        Fine dining only
+      </label>
+      <label>
+        <input type="radio" name="food" value="2">
+        Local street food
+      </label>
+      <label>
+        <input type="radio" name="food" value="3">
+        Casual sit down
+      </label>
+    </div>
+    <button type="submit" name="button">Click here to find your dream destination!</button>
 <div class="tree">
   <span><img src="images/palm-tree.jpg" alt="palm tree"></span>
-
-
 </div>
 
     </div>
