Updated the questions to reflect new parameters of project, added a Lorem Ipsom background image, changed css of questions.

--- a/index.html
+++ b/index.html
@@ -5,39 +5,39 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Vacation</title>
+    <title>Language selector</title>
   </head>
   <body>
     <div class="container">
-      <h1>Please make your selections to find your ideal vacation.</h1>
+      <h1>Complete the questions below to find out which programming language is right for you:</h1>
       <div class="form-group">
-        <label for="geography">Where do you picture yourself on your ideal vacation?</label>
-        <select class="form-control" id="geography">
+        <label for="beverage">When a friend invites you over to watch a Trail Blazers game do you: </label>
+        <select class="form-control" id="beverage">
           <option></option>
-          <option value="1">Beaches</option>
-          <option value="2">Mountains</option>
-          <option value="3">All inclusive resorts</option>
-          <option value="4">Off the grid adventures</option>
+          <option value="1">Drink all of his beers?</option>
+          <option value="2">Bring your own beer, with none to share?</option>
+          <option value="3">Bring a six pack to share</option>
+          <option value="4">Really get the night going and bring a case! </option>
       </select>
     </div>
     <div class="form-group">
-      <label for="weather">What climate do you prefer on your ideal vacation?</label>
-      <select class="form-control" id="weather">
+      <label for="shoes">How clean are you at your friends house?</label>
+      <select class="form-control" id="shoes">
         <option></option>
-        <option value="1">Sunny and hot!</option>
-        <option value="2">More temperant</option>
-        <option value="3">Snow</option>
-        <option value="4">All climates</option>
+        <option value="1">Lay across his couch with your muddy boots?</option>
+        <option value="2">Remove shoes when entering the house?</option>
+        <option value="3">Remove shoes and clean up any mess you made?</option>
+        <option value="4">Remove shoes, clean up after yourself, toss his empties in recycling and offer to get him a new drink?</option>
       </select>
     </div>
     <div class="form-group">
-      <label for="activities">Select your favorite activity to do on an ideal vacation</label>
-      <select class="form-control" id="activities">
+      <label for="selfless">Do you take joy from being of service to others?</label>
+      <select class="form-control" id="selfless">
         <option></option>
-        <option value="1">Relax and Chill</option>
-        <option value="2">Outdoor Activities</option>
-        <option value="3">Taste the local culture</option>
-        <option value="4">Take tours to Museums and historical sites</option>
+        <option value="1">Nope, I look out for numer uno!</option>
+        <option value="2">I'll hold a door for an elderly person</option>
+        <option value="3">I volunteer a one day a year</option>
+        <option value="4">I run a non profit that pairs abandoned dogs with underserved youth. It provides both parties with a sense of pride and ownership in their lives. Whatever money I do make goes right back into keeping our rescue afloat.</option>
       </select>
     </div>
     <div class="form-group">
@@ -65,10 +65,8 @@
         Casual sit down
       </label>
     </div>
-    <button type="submit" name="button">Click here to find your dream destination!</button>
-<div class="tree">
-  <span><img src="images/palm-tree.jpg" alt="palm tree"></span>
-</div>
+    <button type="submit" name="button">Click here to find out which programming language best fits your skill set and learning abilities!</button>
+
 
     </div>
   </body>
