--- a/index.html
+++ b/index.html
@@ -1,81 +1,83 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.4.1.js"></script>
-    <script src="js/scripts.js"></script>
-    <title>Language selector</title>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Complete the questions below to find out which programming language is right for you:</h1>
-      <form id="survey">
-      <div class="form-group">
-        <label for="beverage">When a friend invites you over to watch a Trail Blazers game do you: </label>
-        <select class="form-control" id="beverage">
-          <option></option>
-          <option value="1">Drink all of his beers?</option>
-          <option value="2">Bring your own beer, with none to share?</option>
-          <option value="3">Bring a six pack to share</option>
-          <option value="4">Really get the night going and bring a case! </option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label for="shoes">How clean are you at your friends house?</label>
-      <select class="form-control" id="shoes">
-        <option></option>
-        <option value="1">Lay across his couch with your muddy boots?</option>
-        <option value="2">Remove shoes when entering the house?</option>
-        <option value="3">Remove shoes and clean up any mess you made?</option>
-        <option value="4">Remove shoes, clean up after yourself, toss his empties in recycling and offer to get him a new drink?</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label for="selfless">Do you take joy from being of service to others?</label>
-      <select class="form-control" id="selfless">
-        <option></option>
-        <option value="1">Nope, I look out for numer uno!</option>
-        <option value="2">I'll hold a door for an elderly person</option>
-        <option value="3">I volunteer a one day a year</option>
-        <option value="4">I run a non profit that pairs abandoned dogs with underserved youth. It provides both parties with a sense of pride and ownership in their lives. Whatever money I do make goes right back into keeping our rescue afloat.</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label for="social">What is your preferred level of social interaction with others?</label>
-      <select class="form-control" id="social">
-        <option></option>
-        <option value="1">Relax and Chill.... By myself/with partner</option>
-        <option value="2">Need alone time, but am open to some group functions</option>
-        <option value="3">Some alone time, but I like to mingle!</option>
-        <option value="4">Let's party! I enjoy meeting new people and trying new things</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label for="dining">How do you enjoy your dining experiences?</label>
-      <select class="form-control" id="dining">
-        <option></option>
-        <option value="1">Eat by myself, don't look at me!</option>
-        <option value="2">I like venturing outside, but tend to stick to restaurants I know.</option>
-        <option value="3">Fine dining, jacket required is the only way I go.</option>
-        <option value="4">I like researching new and exciting food trends and I keep a never ending list of new spots to try out with friends!</option>
-      </select>
-    </div>
-<div id="output">
-
-
-    <button type="submit" name="button">Click here to find out which programming language best fits your skill set and learning abilities!</button>
-      </form>
-    <div id="ruby">
-      <p>Based upon your answers we believe that you should begin the Ruby track!</p>
-    </div>
-    <div id="python">
-      <p>Thanks for filling out the survey, we believe that your skill set is best suited for Python!</p>
-    </div>
-    <div id="javascript">
-      <p>Way to go! You're a perfect match for Javascript!</p>
-    </div>
-    </div>
-
-    </div>
-  </body>
+   <!DOCTYPE html>
+   <html>
+      <head>
+         <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+         <link href="css/styles.css" rel="stylesheet" type="text/css">
+         <script src="js/jquery-3.4.1.js"></script>
+         <script src="js/scripts.js"></script>
+         <title>Language selector</title>
+      </head>
+      <body>
+         <div class="container">
+            <h1>Complete the questions below to find out which programming language is right for you:</h1>
+            <form id="survey">
+               <div class="form-group">
+                  <label for="beverage">When a friend invites you over to watch a Trail Blazers game do you: </label>
+                  <select class="form-control" id="beverage">
+                     <option></option>
+                     <option value="1">Drink all of his beers?</option>
+                     <option value="2">Bring your own beer, with none to share?</option>
+                     <option value="3">Bring a six pack to share</option>
+                     <option value="4">Really get the night going and bring a case! </option>
+                  </select>
+               </div>
+               <div class="form-group">
+                  <label for="shoes">How clean are you at your friends house?</label>
+                  <select class="form-control" id="shoes">
+                     <option></option>
+                     <option value="1">Lay across his couch with your muddy boots?</option>
+                     <option value="2">Remove shoes when entering the house?</option>
+                     <option value="3">Remove shoes and clean up any mess you made?</option>
+                     <option value="4">Remove shoes, clean up after yourself, toss his empties in recycling and offer to get him a new drink?</option>
+                  </select>
+               </div>
+               <div class="form-group">
+                  <label for="selfless">Do you take joy from being of service to others?</label>
+                  <select class="form-control" id="selfless">
+                     <option></option>
+                     <option value="1">Nope, I look out for numer uno!</option>
+                     <option value="2">I'll hold a door for an elderly person</option>
+                     <option value="3">I volunteer a one day a year</option>
+                     <option value="4">I run a non profit that pairs abandoned dogs with underserved youth. It provides both parties with a sense of pride and ownership in their lives. Whatever money I do make goes right back into keeping our rescue afloat.</option>
+                  </select>
+               </div>
+               <div class="form-group">
+                  <label for="social">What is your preferred level of social interaction with others?</label>
+                  <select class="form-control" id="social">
+                     <option></option>
+                     <option value="1">Relax and Chill.... By myself/with partner</option>
+                     <option value="2">Need alone time, but am open to some group functions</option>
+                     <option value="3">Some alone time, but I like to mingle!</option>
+                     <option value="4">Let's party! I enjoy meeting new people and trying new things</option>
+                  </select>
+               </div>
+               <div class="form-group">
+                  <label for="dining">How do you enjoy your dining experiences?</label>
+                  <select class="form-control" id="dining">
+                     <option></option>
+                     <option value='1'>Eat by myself, don't look at me!</option>
+                     <option value='2'>I like venturing outside, but tend to stick to restaurants I know.</option>
+                     <option value='3'>Fine dining, jacket required is the only way I go.</option>
+                     <option value='3'>I like researching new and exciting food trends and I keep a never ending list of new spots to try out with friends!</option>
+                  </select>
+               </div>
+               <div class='output'>
+                  <button type="submit" name="button">Click here to find out which programming language best fits your skill set and learning abilities!</button>
+               </div>
+               <div class='output'>
+                  <div id='ruby'>
+                     <p>Based upon your answers we believe that you should begin the Ruby track!</p>
+                  </div>
+                  <div id='python'>
+                     <p>Thanks for filling out the survey, we believe that your skill set is best suited for Python!</p>
+                  </div>
+                  <div id='javascript'>
+                     <p>Way to go! You're a perfect match for Javascript!</p>
+                  </div>
+                  <div id='retake'>
+                    <p>C'mon bozo, complete the entire survey!</p>
+                  </div>
+               </div>
+            </form>
+         </div>
+      </body>
